# marmot

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  STATUS.md  generate_diagram.py  pyproject.toml  state_machine_design.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  PYPI_PUBLISHING.md  STATUS.md
docs/superpowers/plans/: 2026-05-12-marmot-mvp-units-4-7.md  2026-05-12-unit-4-storage.md  2026-05-13-unit-5-clock-registry.md  2026-05-13-unit-6-evaluator.md  2026-05-13-unit-7-dispatcher-app.md
examples/: infoflow_demo.py  quickstart.py
skills/marmot/: SKILL.md
skills/marmot/evals/: evals.json
skills/marmot/references/: api-reference.md  examples.md
src/marmot/: __init__.py  api.py  app.py  bucket.py  models.py  notifiers.py  storage.py  web.py
src/marmot/channels/: __init__.py  base.py  console.py  infoflow.py
src/marmot/domain/: __init__.py  decisions.py  evaluator.py  models.py  state_machine.py
src/marmot/domain/models/: __init__.py  enums.py  events.py  keys.py  rules.py  time_utils.py
src/marmot/notifiers/: __init__.py  base.py  console.py
src/marmot/runtime/: __init__.py  clock.py  dispatcher.py  registry.py
src/marmot/sinks/: __init__.py  console.py  types.py
src/marmot/storage/: __init__.py  _sqlite_sql.py  base.py  memory.py  sqlite.py
tests/: test_aggregate.py  test_app.py  test_channel_console.py  test_channel_infoflow.py  test_clock.py  test_dispatcher.py  test_domain_models.py  test_evaluator.py  test_models.py  test_notifier_console.py  test_registry.py  test_report_pipeline.py  test_sink_console.py  test_smoke.py  test_state_machine.py  test_storage_base.py  test_storage_contract.py  test_storage_memory.py  test_storage_sqlite.py
