[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marmot-alert"
version = "0.1.0"
description = "Lightweight Alert Framework for Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "yxkaze", email = "yxkaze@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["alert", "monitoring", "notification"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/yxkaze/marmot"
Repository = "https://github.com/yxkaze/marmot"

[tool.hatch.build.targets.wheel]
packages = ["src/marmot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
